--- a/app/src/main/res/layout/habit_list.xml
+++ b/app/src/main/res/layout/habit_list.xml
@@ -17,36 +17,22 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
-        <TextView
-            android:id="@+id/user_id"
-            style="@style/Widget.HabitTracker.HabitItemTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif"
-            android:text="12038320"
-            app:layout_constraintEnd_toStartOf="@+id/habit_field_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/habit_field_1"
             style="@style/Widget.HabitTracker.HabitItemTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="128dp"
+            android:layout_height="34dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="180dp"
 
-            android:layout_toEndOf="@+id/user_id"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="250dp"
+
             android:fontFamily="sans-serif-medium"
             android:text="2021-11-22"
             android:textAlignment="center"
             app:layout_constraintEnd_toStartOf="@+id/habit_field_2"
-            app:layout_constraintStart_toEndOf="@+id/user_id"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -56,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginEnd="142dp"
 
             android:fontFamily="sans-serif-medium"
             android:text="20:00"
