--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_detail"
-        android:title="@string/check_detail" />
+        android:id="@+id/action_list"
+        android:title="@string/check_list" />
 
     <item
         android:id="@+id/action_logout"
