--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -44,6 +44,9 @@
         <action
             android:id="@+id/action_habitDetailFragment_to_addHabitFragment"
             app:destination="@id/addHabitFragment" />
+        <action
+            android:id="@+id/action_habitDetailFragment_to_habitListFragment"
+            app:destination="@id/habitListFragment" />
     </fragment>
     <fragment
         android:id="@+id/addHabitFragment"
