Fixed the recyclerView adapter and fragment manager error; re-write the adapter classes and set up the navArgs for retrieving

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -47,6 +47,18 @@
         <action
             android:id="@+id/action_habitDetailFragment_to_habitListFragment"
             app:destination="@id/habitListFragment" />
+        <argument
+            android:name="habit_id"
+            app:argType="string" />
+        <argument
+            android:name="habit_field2"
+            app:argType="string" />
+        <argument
+            android:name="habit_field3"
+            app:argType="string" />
+        <argument
+            android:name="habit_field1"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/addHabitFragment"
