--- a/app/src/main/res/layout/fragment_habit_detail.xml
+++ b/app/src/main/res/layout/fragment_habit_detail.xml
@@ -9,128 +9,120 @@
 
 
     <TextView
-        android:id="@+id/user_id"
+        android:id="@+id/habit_name"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="98dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/Habit_date_label"
+        android:layout_width="215dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="24dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:text="Exercise" />
 
     <TextView
-        android:id="@+id/Habit_date_label"
+        android:id="@+id/habit_attr1_label"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/habit_time_label"
-        app:layout_constraintEnd_toStartOf="@+id/date_detail"
+        android:layout_width="126dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_id"
+        app:layout_constraintTop_toBottomOf="@+id/habit_name"
         tools:text="@string/habit_date" />
 
     <TextView
-        android:id="@+id/habit_time_label"
+        android:id="@+id/habit_attr2_label"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="38dp"
+        android:layout_width="126dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
         android:text="@string/habit_time"
-        app:layout_constraintBottom_toTopOf="@+id/Habit_attribute1_label"
-        app:layout_constraintEnd_toStartOf="@+id/time_detail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Habit_date_label" />
+        app:layout_constraintTop_toBottomOf="@+id/habit_attr1_label" />
 
     <TextView
-        android:id="@+id/date_detail"
+        android:id="@+id/habit_attr3_label"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="33dp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/Habit_date_label"
+        android:layout_width="126dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/habit_attr2_label"
+        tools:text="other" />
+
+
+    <TextView
+        android:id="@+id/habit_attr1"
+        style="@style/Widget.HabitTracker.TextView"
+        android:layout_width="225dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Habit_date_label"
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toEndOf="@+id/habit_attr1_label"
+        app:layout_constraintTop_toBottomOf="@+id/habit_name"
         tools:text="2021-11-20" />
 
     <TextView
-        android:id="@+id/time_detail"
+        android:id="@+id/habit_attr2"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="29dp"
-        app:layout_constraintBottom_toTopOf="@+id/attribute1_detail"
+        android:layout_width="225dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/habit_time_label"
-        app:layout_constraintTop_toBottomOf="@+id/Habit_date_label"
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toEndOf="@+id/habit_attr2_label"
+        app:layout_constraintTop_toBottomOf="@+id/habit_attr1_label"
+
         tools:text="22:33:00" />
 
     <TextView
-        android:id="@+id/Habit_attribute1_label"
+        android:id="@+id/habit_attr3"
         style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="29dp"
-        app:layout_constraintBottom_toTopOf="@+id/delete_habit"
-        app:layout_constraintEnd_toStartOf="@+id/attribute1_detail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/habit_time_label"
+        android:layout_width="225dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toEndOf="@+id/habit_attr3_label"
+        app:layout_constraintTop_toBottomOf="@+id/habit_attr2"
         tools:text="@string/habit_attr1" />
-
-    <TextView
-        android:id="@+id/attribute1_detail"
-        style="@style/Widget.HabitTracker.TextView"
-        android:layout_width="0dp"
-        android:layout_height="33dp"
-        android:layout_marginEnd="3dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/Habit_attribute1_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Habit_attribute1_label"
-        tools:text="other attribute" />
 
     <Button
         android:id="@+id/delete_habit"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="0dp"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
-        android:text="@string/delete"
-        app:layout_constraintBottom_toTopOf="@+id/edit_item"
+        android:layout_marginTop="40dp"
+        android:text="@string/delete_habit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Habit_attribute1_label" />
+        app:layout_constraintTop_toBottomOf="@+id/habit_attr3" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/edit_item"
+        android:id="@+id/edit_habit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="48dp"
         android:contentDescription="@string/edit_habit"
         android:src="@drawable/ic_edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_habit"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
         app:tint="@android:color/white"
         tools:ignore="ImageContrastCheck" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="378dp"
+        android:layout_height="151dp"
         android:contentDescription="TODO"
-        app:layout_constraintBottom_toTopOf="@+id/user_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fui_ic_check_circle_black_128dp" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
