Add main page textView before viewing habit list

--- a/app/src/main/res/layout/habit_list_fragment.xml
+++ b/app/src/main/res/layout/habit_list_fragment.xml
@@ -86,12 +86,32 @@
         app:layout_constraintTop_toBottomOf="@+id/habitAttr1Label" />
 
 
+    <TextView
+        android:id="@+id/tvViewList"
+        android:layout_width="371dp"
+        android:layout_height="470dp"
+        android:lineSpacingExtra="16sp"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintVertical_bias="0.181"
+        android:text="@string/viewList" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:scrollbars="vertical"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
