clean up the code, added data validation

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,8 +27,8 @@
             android:id="@+id/auth_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="104dp"
-            android:background="@color/colorAccent"
+            android:layout_marginTop="76dp"
+            android:background="@color/purple_500"
             android:padding="@dimen/text_padding"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"
