--- a/app/src/main/res/layout/habit_list_fragment.xml
+++ b/app/src/main/res/layout/habit_list_fragment.xml
@@ -33,8 +33,8 @@
     <TextView
         android:id="@+id/habitAttr1Label"
         style="@style/Widget.HabitTracker.Header"
-        android:layout_width="100dp"
-        android:layout_height="18dp"
+        android:layout_width="88dp"
+        android:layout_height="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="224dp"
         android:text="@string/habit_attr1"
@@ -48,15 +48,15 @@
     <TextView
         android:id="@+id/habitAttr2Label"
         style="@style/Widget.HabitTracker.Header"
-        android:layout_width="100dp"
-        android:layout_height="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/habitAttr1Label"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="150dp"
         android:text="@string/habit_attr2"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/habitAttr1Label"
         app:layout_constraintTop_toBottomOf="@+id/btnReading" />
@@ -64,10 +64,10 @@
     <TextView
         android:id="@+id/habitAttr3Label"
         style="@style/Widget.HabitTracker.Header"
-        android:layout_width="115dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
         android:layout_below="@+id/habitAttr2Label"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="39dp"
         android:layout_marginTop="12dp"
         android:text="@string/habit_attr3"
         android:textAlignment="center"
