--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -118,6 +118,9 @@
         <action
             android:id="@+id/action_aboutFragment_to_habitListFragment"
             app:destination="@id/habitListFragment" />
+        <action
+            android:id="@+id/action_aboutFragment_to_MainFragment"
+            app:destination="@id/MainFragment" />
     </fragment>
     <fragment
         android:id="@+id/helpFragment"
@@ -130,5 +133,8 @@
         <action
             android:id="@+id/action_helpFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
+        <action
+            android:id="@+id/action_helpFragment_to_MainFragment"
+            app:destination="@id/MainFragment" />
     </fragment>
 </navigation>
